--- a/src/components/StyledTab/StyledTab.css
+++ b/src/components/StyledTab/StyledTab.css
@@ -1,4 +1,28 @@
 .navbar {
-  position: absolute;
-  top: 5rem;
+  position: fixed;
+  height: 80%;
+  z-index: 1;
+  transition: width 200ms ease;
+}
+
+.navbar-nav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.nav-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 1rem;
+  margin-top: 1rem;
+}
+
+.item-description {
+  display: none;
+  margin-left: 1rem;
 }
