--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ code {
   font-size: 16px;
   font-family: "Fira Sans";
   --text-primary: #b6b6b6;
-  --text-secondary: #ececec;
+  --text-secondary: #da1919;
   --bg-primary: #23232e;
   --bg-secondary: #141418;
 }
