--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -15,33 +16,32 @@ code {
 
 :root {
   font-size: 16px;
-  font-family: "Fira Sans";
   --text-primary: #39e929;
   --text-secondary: #da1919;
   --bg-primary: #23232e;
   --bg-secondary: #141418;
 }
 
-body::-webkit-scrollbar {
+*::-webkit-scrollbar {
   width: 0.5rem;
-  height: 0.5rem;
+  height: 100vh;
 }
 
-body::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   background: #1e1e24;
   box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
 
-body::-webkit-scrollbar-thumb:hover {
+*::-webkit-scrollbar-thumb:hover {
   background: #8c78c2;
   box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
 
-body::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background: #6649b8;
   box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
 
-body::-webkit {
+*::-webkit {
   background: #6649b8;
 }
